Fix header z-index

--- a/app/assets/stylesheets/icons.scss
+++ b/app/assets/stylesheets/icons.scss
@@ -29,7 +29,7 @@
   }
 
   @include media($small-screen-only) {
-    opacity: 0.5;
+    opacity: 0.3;
   }
 }
 
